# sindrom

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: sindrom.cpp
src/BMPHelpers/: BMPHelpers.hpp  BitMapFileHeader.hpp  BitMapInfoHeader.hpp  RGBquad.hpp
src/CmdArgsParser/: CMakeLists.txt  CmdArgsParser.cpp  CmdArgsParser.hpp
src/Executer/: BeginPhrases.hpp  CMakeLists.txt  Executer.cpp  Executer.hpp
src/Matrix/: Matrix.hpp
src/Picture/: CMakeLists.txt  Picture.cpp  Picture.hpp
src/SindromPicture/: CMakeLists.txt  SindromPicture.cpp  SindromPicture.hpp
submodules/colorcode/: CMakeLists.txt
